# ReactRouterRustBlogApp

./: .env.example  .gitignore  CRUD_GUIDE.md  Implementation_Roadmap.md  Phase_1.md  Phase_2.md  Quick_reference.md  README.md  Troubleshooting.md  crt_migration.sh  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.sh
backend/data/: blog.db
backend/migrations/: 001_create_posts.sql  20240101000000_create_posts.sql
backend/src/: errors.rs  handlers.rs  main.rs  models.rs  schema.rs
backups/: Cargo.toml  Dockerfile.dev  docker-compose.yml  home.tsx  package.json  posts.tsx  root.tsx
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  react-route.config.ts  tsconfig.json  vite.config.ts
frontend/app/: createEmotionCache.ts  entry.client.tsx  entry.server.tsx  root.tsx  routes.ts  theme.ts
frontend/app/components/: Layout.tsx  Pagination.tsx
frontend/app/routes/: _index.tsx  home.tsx  posts.$id.edit.tsx  posts.$id.tsx  posts.new.tsx  posts.tsx
scripts/: delete_files.sh  dev_no_docker.sh  run.sh  verify.sh
